Add triggers to schema + generated client
