# schemas/openapi_v1.yml
@@ -666,27 +666,47 @@ components:
       type: object
       required:
         - id
-        - url
-        - triggerType
+        - templateBody
         - createdAt
         - updatedAt
       properties:
         id:
           type: string
-        url:
+        templateBody:
           type: string
-        triggerType:
-          $ref: "#/components/schemas/triggerType"
+        templateUrl:
+          type: string
         createdAt:
           type: string
           format: date-time
         updatedAt:
           type: string
           format: date-time
-    triggerType:
-      type: string
-      enum:
-        - Prometheus
+    newTriggerWithTemplateUrl:
+      type: object
+      required:
+        - templateUrl
+      properties:
+        templateUrl:
+          type: string
+          format: uri
+    newTriggerWithTemplateBody:
+      type: object
+      required:
+        - templateBody
+      properties:
+        templateBody:
+          type: string
+    triggerWebHookRequest:
+      type: object
+    triggerWebHookResponse:
+      type: object
+      required:
+        - notebookUrl
+      properties:
+        notebookUrl:
+          type: string
+          format: uri
     createdBy:
       type: object
       required:
@@ -837,6 +857,8 @@ paths:
     get:
       operationId: get_file
       description: "Get a file"
+      # images are accessible to anonymous users for public notebooks
+      security: []
       responses:
         "200":
           description: OK
@@ -1034,7 +1056,7 @@ paths:
           description: OK
   /api/triggers:
     get:
-      operationId: triggers_list
+      operationId: trigger_list
       responses:
         "200":
           description: OK
@@ -1044,3 +1066,60 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/trigger"
+    post:
+      operationId: trigger_create
+      description: "Create a new trigger"
+      requestBody:
+        description: Template URL or body
+        content:
+          application/json:
+            schema:
+              oneOf:
+                - $ref: "#/components/schemas/newTriggerWithTemplateUrl"
+                - $ref: "#/components/schemas/newTriggerWithTemplateBody"
+  /api/triggers/{triggerId}:
+    parameters:
+      - name: triggerId
+        in: path
+        description: ID of the trigger
+        required: true
+        schema:
+          type: string
+    get:
+      operationId: trigger_get
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/trigger"
+    delete:
+      operationId: trigger_delete
+      responses:
+        "200":
+          description: OK
+  /api/triggers/{triggerId}/webhook:
+    parameters:
+      - name: triggerId
+        in: path
+        description: ID of the trigger
+        required: true
+        schema:
+          type: string
+    post:
+      operationId: trigger_webhook
+      description: "Invoke a trigger to create a notebook from the associated template"
+      requestBody:
+        description: Parameters to pass to the template
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/triggerWebHookRequest"
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/triggerWebHookResponse"
